[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lightrag-hku"
authors = [{ name = "Zirui Guo" }]
requires-python = ">=3.9"
version = "0.0.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "accelerate",
    "aioboto3",
    "aiohttp",
    "graspologic",
    "hnswlib",
    "nano-vectordb",
    "networkx",
    "ollama",
    "openai",
    "pyvis",
    "tenacity",
    "tiktoken",
    "torch",
    "transformers",
    "xxhash",
]
